[project]
name = "maskbit-pytorch"
version = "0.0.2"
description = "MaskBit"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'image generation',
    'scalar quantization',
    'transformers',
    'attention mechanism'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerate",
    "adam-atan2-pytorch>=0.1.1",
    "beartype",
    "einx>=0.3.0",
    "einops>=0.8.0",
    "ema-pytorch",
    "jaxtyping",
    "pillow",
    "torch>=2.2",
    "torchvision",
    "vector-quantize-pytorch>=1.17.8",
    "x-transformers>=1.37.9"
]

[project.urls]
Homepage = "https://pypi.org/project/maskbit-pytorch/"
Repository = "https://github.com/lucidrains/maskbit-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["maskbit_pytorch"]
